[gd_scene load_steps=8 format=3 uid="uid://bduv2ruwnvnui"]

[ext_resource type="Script" path="res://scripts/gui/pause_menu.gd" id="1_wjlwh"]
[ext_resource type="Shader" path="res://assets/shaders/blur.gdshader" id="2_fvfjv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7v381"]
shader = ExtResource("2_fvfjv")
shader_parameter/amount = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ec00b"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 11
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_au7nd"]
bg_color = Color(0.811765, 0.811765, 0.811765, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 11
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jslor"]
bg_color = Color(0.588235, 0.588235, 0.588235, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 11
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8tk5j"]

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wjlwh")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_7v381")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.5
offset_top = -73.5
offset_right = 133.5
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 17

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ec00b")
theme_override_styles/hover = SubResource("StyleBoxFlat_au7nd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jslor")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8tk5j")
text = "Resume Game"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ec00b")
theme_override_styles/hover = SubResource("StyleBoxFlat_au7nd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jslor")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8tk5j")
text = "Exit to Main Menu"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
